@@ -386,8 +386,8 @@ PORT pic_port =
     _defaultRules
   },
   {
-    /* Sizes: char, short, int, long, long long, near ptr, far ptr, gptr, func ptr, banked func ptr, bit, float */
-    1, 2, 2, 4, 8, 2, 2, 3, 2, 3, 1, 4
+  /* Sizes: char, short, int, long, long long, near ptr, far ptr, gptr, func ptr, banked func ptr, bit, float, _BitInt (in bits) */
+    1, 2, 2, 4, 8, 2, 2, 3, 2, 3, 1, 4, 0
     /* TSD - I changed the size of gptr from 3 to 1. However, it should be
        2 so that we can accomodate the PIC's with 4 register banks (like the
        16f877)
